--- a/app/templates/eventFrameGroups/dashboard.html
+++ b/app/templates/eventFrameGroups/dashboard.html
@@ -77,7 +77,8 @@
                     {% if eventFrame.EventFrameTemplate == displayEventFrameTemplate %}
                         <tr>
                             <td><a class = "btn btn-default" title = "Select" href = '{{ url_for("eventFrames.dashboard",
-                                eventFrameId = eventFrame.EventFrameId) }}' target = "_blank"><span class = "glyphicon glyphicon-list"></span></a></td>
+                                eventFrameId = eventFrame.EventFrameId, eventFrameGroupId = eventFrameGroup.EventFrameGroupId) }}'>
+                                <span class = "glyphicon glyphicon-list"></span></a></td>
                             <td>{{ eventFrame.Name }}</td>
                             <td>{{ eventFrame.Element.Name }}</td>
                             {% for eventFrameAttributeTemplate in displayEventFrameTemplate.EventFrameAttributeTemplates %}
