Display the branch if not on a tagged release.

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -6,7 +6,7 @@ Brewery Pi
 
 {% block page_content %}
 <div class = "page-header">
-    <h1>Brewery Pi <small>{{ tagName }}</small></h1>
+    <h1>Brewery Pi <small>{{ version }}</small></h1>
     <h2>Data for the Craft Brewer</h2>
 </div>
 {% if current_user.is_authenticated %}
