Breadcrumb for EFG tag value notes.

--- a/app/templates/eventFrames/dashboard.html
+++ b/app/templates/eventFrames/dashboard.html
@@ -224,16 +224,21 @@
                             {% else %}
                                 {% set noteButtonClass = "btn btn-default" %}
                             {% endif %}
-                            <td><a class = "{{ noteButtonClass }}" title = "Last Value Notes" href = '{{ url_for("tagValueNotes.listTagValueNotes", 
+                            {% if eventFrameEventFrameGroup is none %}
+                                <td><a class = "{{ noteButtonClass }}" title = "Last Value Notes" href = '{{ url_for("tagValueNotes.listTagValueNotes", 
                                     tagValueId = firstTagValue.TagValueId, eventFrameId = eventFrame.EventFrameId,
                                     eventFrameAttributeId = eventFrameAttribute.EventFrameAttributeId) }}'><span class = "glyphicon glyphicon-comment"></span>
                                     </a></td>
-                            {% if eventFrameEventFrameGroup is none %}
                                 <td><a class = "btn btn-default" title = "Edit Last Value" href = '{{ url_for("tagValues.editTagValue",
                                     tagValueId = firstTagValue.TagValueId, eventFrameId = eventFrame.EventFrameId,
                                     eventFrameAttributeId = eventFrameAttribute.EventFrameAttributeId) }}'><span class = "glyphicon glyphicon-edit"></span>
                                     </a></td>
                             {% else %}
+                                <td><a class = "{{ noteButtonClass }}" title = "Last Value Notes" href = '{{ url_for("tagValueNotes.listTagValueNotes", 
+                                    tagValueId = firstTagValue.TagValueId, eventFrameId = eventFrame.EventFrameId,
+                                    eventFrameAttributeId = eventFrameAttribute.EventFrameAttributeId,
+                                    eventFrameGroupId = eventFrameEventFrameGroup.EventFrameGroupId) }}'><span class = "glyphicon glyphicon-comment"></span></a>
+                                    </td>
                                 <td><a class = "btn btn-default" title = "Edit Last Value" href = '{{ url_for("tagValues.editTagValue",
                                     tagValueId = firstTagValue.TagValueId, eventFrameId = eventFrame.EventFrameId,
                                     eventFrameAttributeId = eventFrameAttribute.EventFrameAttributeId,
