Add of child EF work on #233.

--- a/app/templates/eventFrames/dashboard.html
+++ b/app/templates/eventFrames/dashboard.html
@@ -81,9 +81,18 @@
             <h1>Child Event Frames <small>{{ eventFrame.origin().Element.Name }}</small></h1>
         </div>
         <div>
-            <a class = "btn btn-default" id = "aAddChildEventFrame" title = "Add"
-                href = '{{ url_for("eventFrames.addEventFrame", parentEventFrameId = eventFrame.EventFrameId) }}' role = "button">
-                <span class = "glyphicon glyphicon-plus"></span></a>
+            {% if eventFrame.ParentEventFrameId is none %}
+            {% else %}
+                {% if eventFrameEventFrameGroup is none %}
+                    <a class = "btn btn-default" id = "aAddChildEventFrame" title = "Add"
+                        href = '{{ url_for("eventFrames.addEventFrame", parentEventFrameId = eventFrame.EventFrameId) }}' role = "button">
+                        <span class = "glyphicon glyphicon-plus"></span></a>
+                {% else %}
+                    <a class = "btn btn-default" id = "aAddChildEventFrame" title = "Add"
+                        href = '{{ url_for("eventFrames.addEventFrame", parentEventFrameId = eventFrame.EventFrameId,
+                        eventFrameGroupId = eventFrameEventFrameGroup.EventFrameGroupId) }}' role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
+                {% endif %}
+            {% endif %}
             <br><br>
             <table id = "childEventFramesTable" class = "table table-hover" style = "display:none">
                 <thead>
